# HDB-Resale-Flats-Price-Predictions

./: .dockerignore  .gitignore  1_feature_engineering+EDA.ipynb  2_model_building.ipynb  CS3244 Group 31 Presentation Slides.pptx  Makefile  README.md  README.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
config/: pipeline.yaml
data/raw/: building_info.csv  mrt_lrt_data.csv  schools.csv
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.batch
docs/: architecture.md  index.md  runbook.md
docs/adr/: 001-fsspec-vs-boto3.md  002-eventbridge-vs-airflow.md  003-shared-base-image.md  004-latest-json-pointer.md  005-persist-preprocessor.md
docs/modules/: api.md  backtest.md  features.md  ingest.md  models.md  pipeline.md  storage.md  validate.md
infra/terraform/: backend.tf  cloudwatch.tf  ecr.tf  ecs.tf  eventbridge.tf  glue_athena.tf  iam.tf  outputs.tf  s3.tf  variables.tf
src/avm/: collinearity.py  pipeline.py
src/avm/api/: features.py  main.py  model_registry.py  schemas.py
src/avm/backtest/: bias.py  walk_forward.py
src/avm/features/: building.py  macro.py  spatial.py
src/avm/ingest/: macro.py  onemap.py  transactions.py
tests/: test_analytics_summary.py  test_api.py  test_collinearity.py  test_features.py  test_model_bundle.py  test_storage.py  test_validate.py
web/: package-lock.json  package.json  vercel.json
web/app/: layout.tsx  page.tsx
web/components/: BacktestChart.tsx  BiasChart.tsx  FeatureImportanceChart.tsx  MetricsCard.tsx  PredictForm.tsx
web/lib/: analytics.ts  types.ts
(+7 files in other folders)
