[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdb-avm"
version = "1.0.0"
description = "HDB Resale Flat Automated Valuation Model — AWS production pipeline"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "geopy>=2.3.0",
    "aiohttp>=3.8.0",
    "nest-asyncio>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "pandera[io]>=0.16.0",
    "statsmodels>=0.14.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "scipy>=1.10.0",
    "joblib>=1.2.0",
    "fsspec>=2023.1.0",
    "s3fs>=2023.1.0",
    "boto3>=1.26.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "prometheus-client>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "moto[s3]>=4.0.0",
    "ruff>=0.1.0",
    "mkdocs-material>=9.0.0",
    "pip-tools>=7.0.0",
]

[project.scripts]
avm = "src.avm.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
